`Updated Tailwind CSS configuration and added Firebase authentication to the signup page`

--- a/src/index.html
+++ b/src/index.html
@@ -296,7 +296,7 @@
       <!-- Cards Wrapper -->
       <div
         id="tab-content"
-        class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-10 transition-all duration-500"
+        class="grid grid-col sm:grid-cols-2 md:grid-cols-3 gap-10 transition-all duration-500"
       >
         <!-- jsut the clothes -->
         <div
@@ -318,12 +318,14 @@
             Hertunba Nma Maxi Dress
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦660,700</p>
-          <button
-            onclick="window.location.href='./pages/redirect.html'"
-            class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
-          >
-            Get
-          </button>
+          <div>
+            <button
+              onclick="window.location.href='./pages/redirect.html'"
+              class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
+            >
+              Get
+            </button>
+          </div>
         </div>
 
         <div
@@ -660,7 +662,7 @@
     <!-- Footer section -->
     <footer
       class="relative bg-gray-900 text-white bg-fixed bg-cover bg-center py-16 md:py-20"
-      style="background-image: url('/src/assets/images/made4u_logo_black_bg.png')"
+      style="background-image: url('./assets/images/made4u_logo_black_bg.png')"
     >
       <div class="absolute inset-0 bg-black/70"></div>
 
