--- a/src/pages/redirect.html
+++ b/src/pages/redirect.html
@@ -50,12 +50,12 @@
 
         <div class="flex flex-col sm:flex-row gap-4 justify-center">
           <a
-            href="./signup.html"
+            href="/signup"
             class="px-8 py-3 bg-white text-gray-900 rounded-full font-medium hover:bg-gray-200 transition"
             >Sign Up</a
           >
           <a
-            href="./login.html"
+            href="/login"
             class="px-8 py-3 border border-white rounded-full font-medium hover:bg-white/5 transition"
             >Log In</a
           >
