--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -126,7 +126,7 @@
           <p class="text-center text-gray-500 mt-6 text-sm">
             Already have an account?
             <a
-              href="./login.html"
+              href="/login"
               class="text-black font-medium hover:underline"
               >Log In</a
             >
