--- a/src/pages/redirect.html
+++ b/src/pages/redirect.html
@@ -55,7 +55,7 @@
             >Sign Up</a
           >
           <a
-            href="./login"
+            href="./login.html"
             class="px-8 py-3 border border-white rounded-full font-medium hover:bg-white/5 transition"
             >Log In</a
           >
