`Update index.html and vercel.json to use relative paths for redirects`

--- a/src/index.html
+++ b/src/index.html
@@ -78,13 +78,13 @@
 
       <!-- Icons -->
       <div id="icons" class="flex items-center gap-5 text-white">
-        <a href="/redirect" class="relative">
+        <a href="./pages/redirect.html" class="relative">
           <i class="fa-solid fa-cart-shopping cursor-pointer"></i>
           <span
             class="absolute right-0 size-2 rounded-full bg-green-400"
           ></span>
         </a>
-        <a href="/redirect">
+        <a href="./pages/redirect.html">
           <i class="fa-regular fa-user cursor-pointer"></i
         ></a>
       </div>
@@ -266,7 +266,7 @@
           Explore Collection
         </h2>
         <a
-          href="/redirect"
+          href="./pages/redirect.html"
           class="text-gray-800 font-medium hover:underline text-sm md:text-base hover:text-black"
           >See All →</a
         >
@@ -308,7 +308,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='/redirect'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center cursor-pointer justify-center bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -320,7 +320,7 @@
           <p class="text-gray-600 text-lg mt-1">₦660,700</p>
           <div>
             <button
-              onclick="window.location.href='/redirect'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
             >
               Get
@@ -337,7 +337,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='/redirect'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center cursor-pointer bg-black/60 text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -348,7 +348,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦70,000</p>
           <button
-            onclick="window.location.href='/redirect'"
+            onclick="window.location.href='./pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
@@ -364,7 +364,7 @@
               class="rounded-2xl mb-5 h-72 w-full object-cover"
             />
             <button
-              onclick="window.location.href='/redirect'"
+              onclick="window.location.href='./pages/redirect.html'"
               class="absolute inset-0 flex items-center justify-center bg-black/60 cursor-pointer text-white hover:text-green-500 text-lg font-medium opacity-0 group-hover:opacity-100 transition-opacity duration-300"
             >
               Click to Add to Cart<span class="ml-1">→</span>
@@ -375,7 +375,7 @@
           </h3>
           <p class="text-gray-600 text-lg mt-1">₦205,000</p>
           <button
-            onclick="window.location.href='/redirect'"
+            onclick="window.location.href='./pages/redirect.html'"
             class="px-4 py-2 bg-black hover:bg-black/80 text-white rounded-lg my-2 w-full text-center transition duration-300"
           >
             Get
