--- a/src/pages/login.html
+++ b/src/pages/login.html
@@ -16,12 +16,40 @@
       href="https://fonts.googleapis.com/css2?family=Carattere&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quintessential&display=swap"
       rel="stylesheet"
     />
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="../assets/icons/favicon.ico"
+      href="../assets/icons/favicon.svg"
       type="image/x-icon"
     />
+    <style>
+      .form-input-bottom {
+        border: none;
+        border-bottom: 1px solid #e0e0e0;
+        border-radius: 0;
+        padding-left: 0;
+        padding-right: 0;
+        background-color: transparent;
+      }
+      .form-input-bottom:focus {
+        outline: none;
+        ring: 0;
+        box-shadow: none;
+        border-bottom: 1px solid #000000;
+      }
+      .dark .form-input-bottom {
+        border-bottom-color: #4a4a4a;
+        color: #ffffff;
+      }
+      .dark .form-input-bottom:focus {
+        border-bottom-color: #ffffff;
+      }
+      .dark .form-input-bottom::placeholder {
+        color: #9ca3af;
+      }
+    </style>
   </head>
+
   <body class="m-0 p-0 box-border">
     <section class="flex min-h-screen flex-col md:flex-row overflow-hidden">
       <div class="hidden md:block w-1/2 h-screen">
@@ -43,20 +71,10 @@
         "
       >
         <div class="absolute inset-0 bg-black/50"></div>
-        <div class="relative z-10">
-          <div class="flex items-center gap-2 mb-6">
-            <!-- Logo -->
-            <div
-              class="p-0.5 size-11 bg-black rounded-full border border-gray-600 text-white text-xs font-bold overflow-hidden"
-            >
-              <img src="../assets/images/logo.png" alt="m4u" />
-            </div>
-          </div>
-
-          <h1 class="text-4xl font-serif font-bold mb-6">Welcome Back</h1>
-          <p class="text-gray-300 text-sm">
-            Login to you account to get full access of your cart, wishlist and
-            our great offers.
+        <div class="relative z-10 mt-16 flex flex-col items-center justify-center text-center">
+          <h1 class="text-4xl font-serif font-bold tracking-tight mb-6">Welcome Back</h1>
+          <p class="text-gray-100 text-sm ">
+            You are signing in as a buyer.
           </p>
         </div>
       </div>
@@ -65,61 +83,91 @@
       <div
         class="flex flex-col justify-center items-center w-full md:w-1/2 px-4 py-10 md:py-0 bg-white md:bg-white/80 md:backdrop-blur-lg md:shadow-xl md:rounded-l-3xl"
       >
-        <div class="w-full max-w-md">
-          <h1
-            class="text-3xl hidden md:block font-serif md:text-4xl font-bold mb-6"
-          >
-            Welcome Back
-          </h1>
-          <p class="text-gray-500 hidden md:block text-sm mb-10">
-            Login to you account to get full access of your cart, wishlist and
-            our great offers.
-          </p>
-          <form class="space-y-5">
-            <div>
-              <label for="fullName" class="block text-gray-600 mb-2 text-sm"
-                >Full Name</label
-              >
-              <input
-                id="fullName"
-                name="fullName"
-                type="text"
-                autocomplete="name"
-                placeholder="John Doe"
-                class="w-full px-4 py-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-black focus:outline-none shadow-sm transition"
-              />
+        <div
+          class="flex w-full flex-col items-center justify-center overflow-x-hidden px-4 md:my-4"
+        >
+          <a href="https://made4you.vercel.app/" class="absolute top-0 py-8">
+            <img
+              src="../assets/icons/whiteLogo.svg"
+              alt="logom4u"
+              id="blackLogo"
+              class="h-12 md:h-15 md:hidden"
+            />
+
+            <img
+              src="../assets/icons/blackLogo.svg"
+              alt="logom4u"
+              id="whiteLogo"
+              class="h-12 md:h-15 hidden md:block"
+            />
+          </a>
+          <main class="w-full max-w-sm">
+            <div class="text-center hidden md:block">
+              <h2 class="text-3xl font-bold tracking-tight">
+                Welcome Back
+              </h2>
+              <p class="mt-2 text-gray-600">
+               You are signing in as a buyer.
+              </p>
             </div>
-
-            <div>
-              <label for="password" class="block text-gray-600 mb-2 text-sm"
-                >Password</label
-              >
-              <input
-                id="password"
-                name="password"
-                type="password"
-                autocomplete="new-password"
-                placeholder="••••••••"
-                class="w-full px-4 py-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-black focus:outline-none shadow-sm transition"
-              />
+            <form action="#" class="mt-8 space-y-6" method="POST">
+              <div class="flex flex-col">
+                <label
+                  class="text-sm font-medium leading-normal sr-only"
+                  for="email"
+                  >Email or Username</label
+                >
+                <input
+                  autocomplete="email"
+                  class="form-input-bottom h-12 text-base font-normal leading-normal placeholder:text-gray-400 r:text-gray-500"
+                  id="email"
+                  name="email"
+                  placeholder="Email or Username"
+                  required=""
+                  type="email"
+                />
+              </div>
+              <div class="flex flex-col">
+                <label
+                  class="text-sm font-medium leading-normal sr-only"
+                  for="password"
+                  >Password</label
+                >
+                <input
+                  autocomplete="current-password"
+                  class="form-input-bottom h-12 text-base font-normal leading-normal placeholder:text-gray-400 r:text-gray-500"
+                  id="password"
+                  name="password"
+                  placeholder="Password"
+                  required=""
+                  type="password"
+                />
+              </div>
+              <div class="flex items-center justify-start">
+                <a
+                  class="text-sm font-medium text-black hover:underline"
+                  href="#"
+                  >Forgot Password?</a
+                >
+              </div>
+              <div>
+                <button
+                  class="flex w-full justify-center rounded-full bg-black px-4 py-3.5 text-base font-semibold leading-6 text-white shadow-sm hover:bg-gray-800 ray-200 focus-visible:outline focus-visible:outline-offset-2 focus-visible:outline-black"
+                  type="submit"
+                >
+                  Sign In
+                </button>
+              </div>
+            </form>
+            <div class="mt-6 text-center text-sm">
+              <p class="text-gray-500">
+                Don't have an account?
+                <a class="font-semibold text-black hover:underline" href="#"
+                  >Sign up</a
+                >
+              </p>
             </div>
-
-            <button
-              type="submit"
-              class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer"
-            >
-              Log In
-            </button>
-          </form>
-
-          <p class="text-center text-gray-500 mt-6 text-sm">
-            Dont have an account yet?
-            <a
-              href="./login.html"
-              class="text-black font-medium hover:underline"
-              >Sign up</a
-            >
-          </p>
+          </main>
         </div>
       </div>
     </section>
