--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -8,17 +8,51 @@
 
     <!-- Google Fonts -->
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:opsz,wght@14..32,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;1,600&family=Inter:wght@400;500;600;700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quintessential&display=swap"
+      rel="stylesheet"
+    />
+    <!-- Google Font -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Carattere&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Quintessential&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Favicon -->
     <link
       rel="shortcut icon"
-      href="../assets/icons/favicon.ico"
+      href="../assets/icons/favicon.svg"
       type="image/x-icon"
     />
+
+    <style>
+      .form-input-bottom {
+        border: none;
+        border-bottom: 1px solid #e0e0e0;
+        border-radius: 0;
+        padding-left: 0;
+        padding-right: 0;
+        background-color: transparent;
+      }
+      .form-input-bottom:focus {
+        outline: none;
+        ring: 0;
+        box-shadow: none;
+        border-bottom: 1px solid #000000;
+      }
+      .dark .form-input-bottom {
+        border-bottom-color: #4a4a4a;
+        color: #ffffff;
+      }
+      .dark .form-input-bottom:focus {
+        border-bottom-color: #ffffff;
+      }
+      .dark .form-input-bottom::placeholder {
+        color: #9ca3af;
+      }
+    </style>
   </head>
-  <body class="font-sans bg-white">
+
+  <body class="bg-white">
     <section class="flex min-h-screen flex-col md:flex-row overflow-hidden">
       <!-- Left Hero -->
       <div class="hidden md:block w-1/2 h-screen">
@@ -41,54 +75,79 @@
       >
         <div class="absolute inset-0 bg-black/70"></div>
         <div class="relative z-10">
-          <div class="flex items-center gap-2 mb-6">
-            <div
-              class="p-0.5 size-11 bg-black rounded-full border border-gray-600 text-white text-xs font-bold overflow-hidden"
-            >
-              <img src="../assets/images/logo.png" alt="m4u" />
-            </div>
+          <div class="flex items-center justify-center text-center gap-2 mb-15">
+            <a href="https://made4you.vercel.app/" class="absolute top-0">
+              <img
+                src="../assets/icons/whiteLogo.svg"
+                alt="logom4u"
+                id="blackLogo"
+                class="h-12 md:h-15 md:hidden"
+              />
+
+              <img
+                src="../assets/icons/blackLogo.svg"
+                alt="logom4u"
+                id="whiteLogo"
+                class="h-12 md:h-15 hidden md:block"
+              />
+            </a>
           </div>
 
-          <h1 class="text-3xl font-serif md:text-4xl font-bold mb-6">
+          <h1 class="text-3xl md:text-4xl font-bold mb-6 text-center">
             Create Account
           </h1>
-          <p class="text-gray-300 text-sm">
-            Join the movement and get early access to new drops and collections.
+          <p class="text-gray-300 text-sm text-center">
+            Create a buyer account and get early access to new drops and
+            collections.
           </p>
         </div>
       </div>
 
       <!-- Right Form -->
       <div
-        class="flex flex-col justify-center items-center w-full md:w-1/2 px-4 py-10 md:py-0 bg-white md:bg-white/80 md:backdrop-blur-lg md:shadow-xl md:rounded-l-3xl"
+        class="flex flex-col justify-center items-center w-full md:w-1/2 px-4 py-10 md:py-0 bg-white md:bg-white/80 md:backdrop-blur-lg md:shadow-xl"
       >
-        <div class="w-full max-w-md">
-          <h1
-            class="text-3xl hidden md:block font-serif md:text-4xl font-bold mb-6"
-          >
+        <div class="w-full max-w-sm">
+          <div class="flex items-center justify-center text-center gap-2 mb-10">
+            <a href="https://made4you.vercel.app/">
+              <img
+                src="../assets/icons/blackLogo.svg"
+                alt="logom4u"
+                id="whiteLogo"
+                class="h-15 hidden md:block"
+              />
+            </a>
+          </div>
+
+          <h1 class="text-3xl hidden md:block md:text-4xl font-bold mb-6">
             Create Account
           </h1>
           <p class="text-gray-500 hidden md:block text-sm mb-10">
-            Join the movement and get early access to new drops and collections.
+            Create a buyer account and get early access to new drops and
+            collections.
           </p>
 
           <form class="space-y-5">
             <div>
-              <label for="fullName" class="block text-gray-600 mb-2 text-sm"
-                >Full Name</label
+              <label
+                class="text-sm font-medium leading-normal sr-only"
+                for="text"
+                >Username</label
               >
               <input
-                id="fullName"
-                name="fullName"
-                type="text"
                 autocomplete="name"
-                placeholder="John Doe"
-                class="w-full px-4 py-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-black focus:outline-none shadow-sm transition"
+                class="form-input-bottom h-12 w-full text-md tracking-wide font-medium leading-2 placeholder:text-gray-400"
+                id="fullName"
+                name="userName"
+                placeholder="Username"
+                type="text"
               />
             </div>
 
             <div>
-              <label for="email" class="block text-gray-600 mb-2 text-sm"
+              <label
+                for="email"
+                class="text-sm font-medium leading-normal sr-only"
                 >Email</label
               >
               <input
@@ -96,13 +155,15 @@
                 name="email"
                 type="email"
                 autocomplete="email"
-                placeholder="you@example.com"
-                class="w-full px-4 py-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-black focus:outline-none shadow-sm transition"
+                placeholder="Email address"
+                class="form-input-bottom h-12 w-full text-md tracking-wide font-medium leading-2 placeholder:text-gray-400"
               />
             </div>
 
             <div>
-              <label for="password" class="block text-gray-600 mb-2 text-sm"
+              <label
+                for="password"
+                class="text-sm font-medium leading-normal sr-only"
                 >Password</label
               >
               <input
@@ -110,15 +171,30 @@
                 name="password"
                 type="password"
                 autocomplete="new-password"
-                placeholder="••••••••"
-                class="w-full px-4 py-3 rounded-full border border-gray-300 focus:ring-2 focus:ring-black focus:outline-none shadow-sm transition"
+                placeholder="Password"
+                class="form-input-bottom h-12 w-full text-md tracking-wide font-medium leading-2 placeholder:text-gray-400"
+              />
+            </div>
+
+            <div>
+              <label
+                for="password"
+                class="text-sm font-medium leading-normal sr-only"
+                >Cofirm Password</label
+              >
+              <input
+                id="confirmPassword"
+                name="confirmPassword"
+                type="password"
+                placeholder="Confirm password"
+                class="form-input-bottom h-12 w-full text-md tracking-wide font-medium leading-2 placeholder:text-gray-400"
               />
             </div>
 
             <button
               type="button"
               onclick="register()"
-              class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer"
+              class="w-full bg-black text-white py-3 rounded-full font-medium hover:bg-gray-800 transition shadow-md cursor-pointer mt-5"
             >
               Sign Up
             </button>
@@ -126,7 +202,9 @@
 
           <p class="text-center text-gray-500 mt-6 text-sm">
             Already have an account?
-            <a href="/login" class="text-black font-medium hover:underline"
+            <a
+              href="./login.html"
+              class="text-black font-medium hover:underline"
               >Log In</a
             >
           </p>
