--- a/src/pages/signup.html
+++ b/src/pages/signup.html
@@ -219,26 +219,66 @@
         getAuth,
         createUserWithEmailAndPassword,
       } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-auth.js";
+
+      import {
+        getFirestore,
+        setDoc,
+        doc,
+      } from "https://www.gstatic.com/firebasejs/12.5.0/firebase-firestore.js";
+
       import { firebaseConfig } from "../js/firebase-config.js";
 
+      // init
       const app = initializeApp(firebaseConfig);
       const auth = getAuth(app);
+      const db = getFirestore(app);
 
+      // register fn for the submit btn
       window.register = async () => {
+        const username = document.getElementById("fullName").value.trim();
         const email = document.getElementById("email").value.trim();
         const password = document.getElementById("password").value;
+        const confirmPassword =
+          document.getElementById("confirmPassword").value;
+
+        // VALIDATION
+        if (!username || !email || !password) {
+          alert("Please fill all fields.");
+          return;
+        }
+
+        if (password !== confirmPassword) {
+          alert("Passwords do not match.");
+          return;
+        }
+
+        if (password.length < 6) {
+          alert("Password must be at least 6 characters.");
+          return;
+        }
 
         try {
+          // CREATE USER
           const userCredential = await createUserWithEmailAndPassword(
             auth,
             email,
             password
           );
-          console.log("✅ User created:", userCredential.user);
+          const user = userCredential.user;
+
+          // SAVE USER DATA
+          await setDoc(doc(db, "users", user.uid), {
+            username,
+            email,
+            role: "buyer",
+            createdAt: new Date().toISOString(),
+          });
+
           alert("Account created successfully!");
+          console.log("User saved in Firestore");
         } catch (err) {
-          console.error("❌ Signup error:", err.message);
           alert(err.message);
+          console.log(err);
         }
       };
     </script>
